--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs: 
   build-deploy
-    name: Build and Deploy Spring boot for beginner
+    - name: Build and Deploy Spring boot for beginner
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
