--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,27 @@
 name: Build and Deploy Spring App
-on:
-  push:
-    branches: 
-      - main
-jobs: 
-  build-deploy
-    - name: Build and Deploy Spring boot for beginner
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: setup JDK 17
-        uses: actions/setup-java@v3
-        with: 
-          distribution: 'corretto'
-          java-version: 17
-      - name: Unit Tests
-        run: mvn -B test --file pom.xml
-      - name: Build the applicaiton 
-        run: | 
-          mvn clean
-          mvn -B package --file pom.xml
+
+on: 
+ push:
+  branches:
+   - main
+
+jobs:
+ build-deploy:
+  name: Build and Deploy spring boot for Beginner
+  runs-on: ubuntu-latest
+  steps: 
+   - name: Checkout code
+     uses: action/checkout@v3
+
+   - name: Setup JDK 17
+     uses: action/setup-java@v3
+     with: 
+      distribution: 'corretto'
+      java-version: 17
+   - name: Unit Tests
+     run: mvn -B test --file pom.xml
+   - name: Build the Application
+     run: |
+      mvn clean
+      mvn -B package --file pom.xml
+      
