--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
   runs-on: ubuntu-latest
   steps: 
    - name: Checkout code
-     uses: action/checkout@v3
+     uses: actions/checkout@v3
 
    - name: Setup JDK 17
-     uses: action/setup-java@v3
+     uses: actions/setup-java@v3
      with: 
       distribution: 'corretto'
       java-version: 17
